--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans&display=swap");
 * {
   font-family: "DM Sans", sans-serif;
   margin: 0px;
@@ -77,10 +78,11 @@ body {
 
 h1 {
   position: absolute;
-  font-size: 7rem;
-  font-weight: 700;
-  top: calc(50vh - 7rem);
-  left: calc(50% - 9rem);
+  top: calc(50vh - 4rem);
+  left: calc(50% - 10rem);
+  font-size: 1.2rem;
+  font-weight: 400;
+  text-align: center;
 }
 
 h2 {
@@ -90,25 +92,19 @@ h2 {
   font-size: 1.2rem;
   font-weight: 400;
   margin-bottom: 2rem;
-}
-
-p {
-  position: absolute;
-  bottom: 3rem;
-  left: calc(50% - 11rem);
-  font-size: 1.2rem;
-  text-align: center;
+  text-decoration: underline;
 }
 
 .social {
   position: absolute;
   bottom: 3rem;
-  left: 3rem;
+  left: calc(50% - 4rem);
   list-style: none;
   transition: 0.2s;
+  display: flex;
 }
 .social li {
-  padding-top: 1rem;
+  padding: 1rem;
 }
 .social li a {
   opacity: 0.7;
@@ -118,10 +114,6 @@ p {
 }
 .social li a:hover {
   opacity: 1;
-}
-
-.social:hover {
-  font-size: 2rem;
 }
 
 @keyframes gradient {
